configs/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fayol
---
apiVersion: v1
kind: Namespace
metadata:
  name: fayol-monitoring
